--- a/pom.xml
+++ b/pom.xml
@@ -84,11 +84,15 @@
         </property>
       </activation>
       <build>
-        <plugins>        
-              <plugin>
-                <artifactId>maven-deploy-plugin</artifactId>
-                <version>2.8</version>
-              </plugin>
+        <pluginManagement>
+          <plugins>
+            <plugin>
+              <artifactId>maven-deploy-plugin</artifactId>
+              <version>2.8</version>
+            </plugin>
+          </plugins>
+        </pluginManagement>
+        <plugins>
           <plugin>
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-compiler-plugin</artifactId>
