--- a/pom.xml
+++ b/pom.xml
@@ -89,6 +89,7 @@
             <plugin>
               <artifactId>maven-deploy-plugin</artifactId>
               <version>2.8</version>
+              <configuration combine.self="override"/>
             </plugin>
           </plugins>
         </pluginManagement>
