--- a/pom.xml
+++ b/pom.xml
@@ -28,8 +28,14 @@
   </scm>
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <maven.compiler.source>11</maven.compiler.source>
-    <maven.compiler.target>11</maven.compiler.target>
+    <maven.compiler.source>1.7</maven.compiler.source>
+    <maven.compiler.target>1.7</maven.compiler.target>
+    <maven.compilier.plugin.version>3.3</maven.compilier.plugin.version>
+    <nexus.staging.maven.plugin.version>1.6.3</nexus.staging.maven.plugin.version>
+    <maven.source.plugin.version>2.2.1</maven.source.plugin.version>
+    <maven.javadoc.plugin.version>2.9.1</maven.javadoc.plugin.version>
+    <maven.gpg.plugin.version>1.5</maven.gpg.plugin.version>
+  </properties>    
   </properties>
   <repositories>
     <repository>
@@ -79,7 +85,21 @@
         </property>
       </activation>
       <build>
+        <pluginManagement>
+          <plugins>
+            <plugin>
+              <artifactId>maven-deploy-plugin</artifactId>
+              <version>2.8</version>
+              <configuration combine.self="override"/>
+            </plugin>
+          </plugins>
+        </pluginManagement>        
         <plugins>
+            <plugin>
+              <artifactId>maven-deploy-plugin</artifactId>
+              <version>2.8</version>
+              <configuration combine.self="override"/>
+            </plugin>          
           <plugin>
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-compiler-plugin</artifactId>
