--- a/pom.xml
+++ b/pom.xml
@@ -74,30 +74,21 @@
       <scope>test</scope>
     </dependency>
   </dependencies>
-  <profiles>
-    <profile>
-      <id>release</id>
-      <activation>
-        <property>
-          <name>release</name>
-          <value>true</value>
-        </property>
-      </activation>
       <build>
         <pluginManagement>
           <plugins>
             <plugin>
-              <artifactId>maven-deploy-plugin</artifactId>
-              <version>2.8</version>
-              <configuration combine.self="override"/>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-deploy-plugin</artifactId>
+				<version>2.8</version>
             </plugin>
           </plugins>
         </pluginManagement>        
         <plugins>
             <plugin>
-              <artifactId>maven-deploy-plugin</artifactId>
-              <version>2.8</version>
-              <configuration combine.self="override"/>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-deploy-plugin</artifactId>
+				<version>2.8</version>
             </plugin>          
           <plugin>
             <groupId>org.apache.maven.plugins</groupId>
@@ -157,6 +148,4 @@
           </plugin>
         </plugins>
       </build>
-    </profile>
-  </profiles>
 </project>
