--- a/pom.xml
+++ b/pom.xml
@@ -61,6 +61,24 @@
       <scope>test</scope>
     </dependency>
   </dependencies>
+  <build>
+	<pluginManagement>
+	  <plugins>
+		<plugin>
+			<groupId>org.apache.maven.plugins</groupId>
+			<artifactId>maven-deploy-plugin</artifactId>
+			<version>2.8</version>
+		</plugin>
+	  </plugins>
+	</pluginManagement>        
+	<plugins>
+		<plugin>
+			<groupId>org.apache.maven.plugins</groupId>
+			<artifactId>maven-deploy-plugin</artifactId>
+			<version>2.8</version>
+		</plugin>
+	</plugins>
+  </build>    
   <profiles>
     <profile>
       <id>release</id>
